syntax="proto3";

package proto;

service Blockchain{
    rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
    rpc GetBlockchain(GetBlockchainRequest) returns (GetBlockchainResponse) {}
}

message AddBlockRequest{
    string data = 1;
}

message AddBlockResponse{
    string hash = 1;
}

message GetBlockchainRequest{}

message Block{
    string hash=1;
    string prevBlockHash=2;
    string data=3;
}

message GetBlockchainResponse{
    repeated Block blocks = 1;
}

// service user{
//     rpc Login(LoginRequest) returns (Response) {}
//     rpc Logout(EmptyRequest) returns (Response) {}
// }

// message LoginRequest{
//     strig username = 1;
//     string password = 2;
// }

// message Response{
//     string responsemsg = 1;
//     int32 responsecode = 2;
// }

// message EmptyRequest{
    
// }
